@startuml
class Usuario {
  + id: int
  + nombre: str
  + email: str
  + rol: str
}

class Proyecto {
  + id: int
  + nombre: str
  + fecha_inicio: date
  + fecha_fin: date
  + gestor_id: int
}

class Tarea {
  + id: int
  + nombre: str
  + descripcion: str
  + fecha_limite: date
  + estado: str
  + prioridad: str
  + proyecto_id: int
}

class Habilidad {
  + id: int
  + nombre: str
}

class OfertaEmpleo {
  + id: int
  + titulo: str
  + empresa: str
  + ubicacion: str
  + salario: float
  + fecha_publicacion: date
}

class DatoMercado {
  + id: int
  + fecha: date
  + habilidades_demandadas: str
  + tendencias_region: str
  + tendencias_industria: str
}

Usuario "1" -- "*" Proyecto : gestiona
Proyecto "1" -- "*" Tarea : contiene
Tarea "*" -- "*" Usuario : asignada a
OfertaEmpleo "*" -- "*" Habilidad : requiere
OfertaEmpleo "*" -- "1" DatoMercado : contribuye a

@enduml